display Graded/Not graded in test detail & review

--- a/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-submission-review/test-submission-review.component.html
@@ -1,5 +1,6 @@
 <div class="jumbotron">
   <h2>{{submission.testTopic}}</h2>
+  <b>{{courseTestUtils.isGradedToString(submission.isTestGraded)}}</b>
   <div>
     Submitted at: {{dateTimeFormatter.formatToLocal(submission.submittedDateTime)}}
   </div>
