--- a/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-create/test-create.component.html
@@ -7,6 +7,22 @@
     <input type="text" class="form-control" id="testTopic" [(ngModel)]="testToCreate.topic" name="testTopic">
   </div>
   <div class="form-group">
+    <div>Is this test graded?</div>
+
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedTrue" [(ngModel)]="testToCreate.isGraded" [value]="true">
+      <label class="form-check-label" for="testIsGradedTrue">
+        Yes
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedFalse" [(ngModel)]="testToCreate.isGraded" [value]="false">
+      <label class="form-check-label" for="testIsGradedFalse">
+        No
+      </label>
+    </div>
+  </div>
+  <div class="form-group">
     <label for="testWeight">Weight</label>
     <input type="number" class="form-control" id="testWeight" [(ngModel)]="testToCreate.weight"
            name="weight">
