submitted quizzes container added

--- a/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/student-detail/student-detail.component.html
@@ -9,3 +9,5 @@
 <app-student-average-score [courseMemberId]="courseMemberId"></app-student-average-score>
 
 <app-add-grade *ngIf="isAdmin" [courseMemberId]="courseMemberId"></app-add-grade>
+
+<app-student-quiz-submissions [courseMemberId]="courseMemberId"></app-student-quiz-submissions>
