isAdmin input field added to CourseDetail subcomponents

--- a/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
@@ -2,7 +2,7 @@
   <button class="btn btn-success" routerLink="/students/{{currentCourseMemberId}}">My Grades</button>
 </div>
 
-<app-test-list [courseId]="courseId"></app-test-list>
-<app-file-list [courseId]="courseId"></app-file-list>
+<app-test-list [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-test-list>
+<app-file-list [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-file-list>
 <app-student-list *ngIf="isAdmin" [courseId]="courseId"></app-student-list>
-<app-course-forum [courseId]="courseId"></app-course-forum>
+<app-course-forum [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-course-forum>
