--- a/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/file-list/file-list.component.html
@@ -3,13 +3,13 @@
   <table class="table table-striped table-responsive">
     <tr *ngFor="let file of this.uploadedFiles">
       <td><span class="btn btn-link" (click)="downloadFile(file.id, file.name)">{{file.name}}</span></td>
-      <td *ngIf="isAdmin">
+      <td *ngIf="isCourseAdmin">
         <button class="btn btn-danger" (click)="removeFile(file.id)">Remove</button>
       </td>
     </tr>
   </table>
 </div>
-<div class="jumbotron" *ngIf="isAdmin">
+<div class="jumbotron" *ngIf="isCourseAdmin">
   <h3>Add new file</h3>
   <form>
     <div class="form-row">
