--- a/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/test-list/test-list.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h3>Tests</h3>
-  <div *ngIf="isAdmin && nonPublishedTests.length > 0">
+  <div *ngIf="isCourseAdmin && nonPublishedTests.length > 0">
     <b>Not published</b>
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.nonPublishedTests">
@@ -27,8 +27,8 @@
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.activeTests">
         <td>
-          <a *ngIf="isAdmin" routerLink="/tests/{{test.id}}">{{test.topic}}</a>
-          <a *ngIf="!isAdmin" routerLink="/tests/submit/{{test.id}}">{{test.topic}}</a>
+          <a *ngIf="isCourseAdmin" routerLink="/tests/{{test.id}}">{{test.topic}}</a>
+          <a *ngIf="!isCourseAdmin" routerLink="/tests/submit/{{test.id}}">{{test.topic}}</a>
         </td>
         <td>
           <b>Deadline: {{dateTimeFormatter.formatToLocal(test.deadline)}}</b>
@@ -39,7 +39,7 @@
       </tr>
     </table>
   </div>
-  <div *ngIf="isAdmin && testsAfterDeadline.length > 0">
+  <div *ngIf="isCourseAdmin && testsAfterDeadline.length > 0">
     <b>After deadline</b>
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.testsAfterDeadline">
@@ -53,7 +53,7 @@
     </table>
   </div>
   <div class="my-3">
-    <button *ngIf="isAdmin" class="btn btn-success" routerLink="/tests/create/{{this.courseId}}">
+    <button *ngIf="isCourseAdmin" class="btn btn-success" routerLink="/tests/create/{{this.courseId}}">
       Create new test
     </button>
   </div>
