isAdmin removed from course-list

--- a/CourseManagementSystem.API/ClientApp/src/app/course-list/course-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-list/course-list.component.html
@@ -9,7 +9,7 @@
   </table>
 </div>
 
-<div class="jumbotron" *ngIf="isAdmin">
+<div class="jumbotron">
   <h3>Managed Courses</h3>
   <table class="table table-striped table-responsive">
     <tr *ngFor="let course of managedCourses">
@@ -23,7 +23,7 @@
   </table>
 </div>
 
-<div class="jumbotron" *ngIf="isAdmin">
+<div class="jumbotron">
   <h3>Add new course</h3>
   <form>
     <div class="form-row">
