--- a/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/course-detail/course-detail.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="!isAdmin">
+<div *ngIf="!isCourseAdmin">
   <button class="btn btn-success" routerLink="/students/{{currentCourseMemberId}}">My Grades</button>
 </div>
 
-<app-test-list [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-test-list>
-<app-file-list [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-file-list>
-<app-student-list *ngIf="isAdmin" [courseId]="courseId"></app-student-list>
-<app-course-forum [courseId]="courseId" [isCourseAdmin]="isAdmin"></app-course-forum>
+<app-test-list [courseId]="courseId" [isCourseAdmin]="isCourseAdmin"></app-test-list>
+<app-file-list [courseId]="courseId" [isCourseAdmin]="isCourseAdmin"></app-file-list>
+<app-student-list *ngIf="isCourseAdmin" [courseId]="courseId"></app-student-list>
+<app-course-forum [courseId]="courseId" [isCourseAdmin]="isCourseAdmin"></app-course-forum>
