--- a/CourseManagementSystem.API/ClientApp/src/app/admin-list/admin-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/admin-list/admin-list.component.html
@@ -14,7 +14,7 @@
   </table>
 
   <div>
-    <h4>Add new admin</h4>
+    <b>Add new admin</b>
     <form>
       <div class="form-group">
         <label for="adminId">Person ID</label>
