UI support for removing admins

--- a/CourseManagementSystem.API/ClientApp/src/app/admin-list/admin-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/admin-list/admin-list.component.html
@@ -9,7 +9,9 @@
     <tr *ngFor="let admin of admins">
       <td>{{admin.name}}</td>
       <td>{{admin.email}}</td>
-      <td>Remove</td>
+      <td>
+        <button class="btn btn-danger" (click)="removeAdmin(admin.id)">Remove</button>
+      </td>
     </tr>
   </table>
 
