added Course and Person Id to UI

--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
@@ -38,3 +38,10 @@
 </div>
 
 <app-course-enrollment></app-course-enrollment>
+
+<div class="jumbotron">
+  <h4>My person Id</h4>
+  <div>
+    {{currentUserId}}
+  </div>
+</div>
