--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-detail/course-detail.component.html
@@ -1,3 +1,10 @@
+<div class="jumbotron">
+  <h2>{{courseInfo.name}}</h2>
+  <div>
+    <b>Course Id:</b> {{courseId}}
+  </div>
+</div>
+
 <div *ngIf="!isCourseAdmin">
   <button class="btn btn-success" routerLink="/students/{{currentCourseMemberId}}">My Grades</button>
 </div>
