--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-question-edit/test-question-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-question-edit/test-question-edit.component.html
@@ -40,7 +40,7 @@
   <div class="form-group">
     <label for="questionText2{{question.number}}">Question text</label>
     <textarea class="form-control" id="questionText2{{question.number}}"
-              [(ngModel)]="questionText" name="questionText{{question.number}}"
+              [(ngModel)]="questionWithAnswerChoices.questionText" name="questionText{{question.number}}"
               (focusout)="serializePossibleAnswers()"></textarea>
   </div>
 
@@ -54,7 +54,7 @@
 
   <div>
     <ul class="list-group">
-      <li *ngFor="let choice of this.possibleAnswers" class="list-group-item">
+      <li *ngFor="let choice of this.questionWithAnswerChoices.possibleAnswers" class="list-group-item">
         <label for="answerChoice{{choice.answerLetter}}"><b>{{choice.answerLetter}}</b></label>
         <input type="text" class="form-control" id="answerChoice{{choice.answerLetter}}"
                name="answerChoice{{choice.answerLetter}}"
