used separated components for each test question

--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
@@ -44,7 +44,7 @@
 </form>
 <form>
   <div class="jumbotron" *ngFor="let question of testToCreate.questions">
-    <app-test-question [question]="question"></app-test-question>
+    <app-test-question-edit [question]="question"></app-test-question-edit>
   </div>
 </form>
 <div class="my-3">
