--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-submit/test-submit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-submit/test-submit.component.html
@@ -4,12 +4,7 @@
 </div>
 <div class="jumbotron" *ngFor="let answer of this.testSubmission.answers">
   <h3>Question {{answer.questionNumber}}</h3>
-  <div class="form-group">
-    <div>{{answer.questionText}}</div>
-    <label for="answerText{{answer.questionNumber}}">Answer text</label>
-    <input type="text" class="form-control" id="answerText{{answer.questionNumber}}"
-           [(ngModel)]="answer.answerText" name="answerText{{answer.questionNumber}}">
-  </div>
+  <app-test-question-answer-form [answer]="answer"></app-test-question-answer-form>
 </div>
 <div>
   <button type="button" class="btn btn-info" (click)="saveAnswers()">Save answers</button>
