--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h3>My Courses</h3>
+  <h3>Member Courses</h3>
   <table class="table table-striped table-responsive">
     <tr *ngFor="let course of memberCourses">
       <td>
