--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
@@ -1,54 +1,61 @@
-<div class="jumbotron">
-  <h2>Create new test</h2>
-</div>
-<form class="jumbotron">
-  <div class="form-group">
-    <label for="testTopic">Topic</label>
-    <input type="text" class="form-control" id="testTopic" [(ngModel)]="testToCreate.topic" name="testTopic">
-  </div>
-  <div class="form-group">
-    <div>Is this test graded?</div>
-
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedTrue" [(ngModel)]="testToCreate.isGraded" [value]="true">
-      <label class="form-check-label" for="testIsGradedTrue">
-        Yes
-      </label>
+<div class="row">
+  <app-course-menu [courseId]="courseId"></app-course-menu>
+  <div class="col-md-10 order-md-1">
+    <div class="jumbotron">
+      <h2>Create new test</h2>
     </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedFalse" [(ngModel)]="testToCreate.isGraded" [value]="false">
-      <label class="form-check-label" for="testIsGradedFalse">
-        No
-      </label>
+    <form class="jumbotron">
+      <div class="form-group">
+        <label for="testTopic">Topic</label>
+        <input type="text" class="form-control" id="testTopic" [(ngModel)]="testToCreate.topic" name="testTopic">
+      </div>
+      <div class="form-group">
+        <div>Is this test graded?</div>
+
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedTrue"
+                 [(ngModel)]="testToCreate.isGraded" [value]="true">
+          <label class="form-check-label" for="testIsGradedTrue">
+            Yes
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedFalse"
+                 [(ngModel)]="testToCreate.isGraded" [value]="false">
+          <label class="form-check-label" for="testIsGradedFalse">
+            No
+          </label>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="testWeight">Weight</label>
+        <input type="number" class="form-control" id="testWeight" [(ngModel)]="testToCreate.weight"
+               name="weight">
+      </div>
+      <div class="form-group">
+        <label for="testDeadlineDate">Deadline</label>
+        <input type="date" class="form-control" id="testDeadlineDate" [(ngModel)]="dateTimeBinder.date"
+               name="testDeadlineDate">
+        <input type="time" class="form-control" id="testDeadlineTime" [(ngModel)]="dateTimeBinder.time"
+               name="testDeadlineTime">
+
+      </div>
+      <div class="form-group">
+        <label for="questionCountInput">Question count</label>
+        <input type="number" class="form-control" id="questionCountInput" [(ngModel)]="this.questionCount"
+               name="questionCount">
+      </div>
+      <button type="button" class="btn btn-primary" (click)="updateQuestionCount()">Apply</button>
+    </form>
+    <form>
+      <div class="jumbotron" *ngFor="let question of testToCreate.questions">
+        <app-test-question-edit [question]="question"></app-test-question-edit>
+      </div>
+    </form>
+    <div class="my-3">
+      <button *ngIf="testToCreate.questions.length > 0" type="button" class="btn btn-success" (click)="createTest()">
+        Create
+      </button>
     </div>
   </div>
-  <div class="form-group">
-    <label for="testWeight">Weight</label>
-    <input type="number" class="form-control" id="testWeight" [(ngModel)]="testToCreate.weight"
-           name="weight">
-  </div>
-  <div class="form-group">
-      <label for="testDeadlineDate">Deadline</label>
-      <input type="date" class="form-control" id="testDeadlineDate" [(ngModel)]="dateTimeBinder.date"
-             name="testDeadlineDate">
-      <input type="time" class="form-control" id="testDeadlineTime" [(ngModel)]="dateTimeBinder.time"
-             name="testDeadlineTime">
-
-  </div>
-  <div class="form-group">
-    <label for="questionCountInput">Question count</label>
-    <input type="number" class="form-control" id="questionCountInput" [(ngModel)]="this.questionCount"
-           name="questionCount">
-  </div>
-  <button type="button" class="btn btn-primary" (click)="updateQuestionCount()">Apply</button>
-</form>
-<form>
-  <div class="jumbotron" *ngFor="let question of testToCreate.questions">
-    <app-test-question-edit [question]="question"></app-test-question-edit>
-  </div>
-</form>
-<div class="my-3">
-  <button *ngIf="testToCreate.questions.length > 0" type="button" class="btn btn-success" (click)="createTest()">
-    Create
-  </button>
 </div>
