course menu UI updated

--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-submission-review/test-submission-review.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <app-course-menu [courseId]="courseId"></app-course-menu>
+  <div class="col-md-2 order-md-2">
+    <app-course-menu [courseId]="courseId"></app-course-menu>
+  </div>
   <div class="col-md-10 order-md-1">
     <div class="jumbotron">
       <h2>{{submission.testTopic}}</h2>
