--- a/CourseManagementSystem.API/ClientApp/src/app/components/student-list/student-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/student-list/student-list.component.html
@@ -15,4 +15,9 @@
       </td>
     </tr>
   </table>
+  <div class="my-2">
+    <div>
+      <button class="btn btn-info" routerLink="/courses/{{courseId}}/enrollmentRequests">Enrollment requests</button>
+    </div>
+  </div>
 </div>
