test detail page UI updated

--- a/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
@@ -16,7 +16,7 @@
   </table>
 
   <div>
-    <b>Add new admin</b>
+    <h6>Add new admin</h6>
     <form>
       <div class="form-group">
         <label for="adminId">Person ID</label>
