formatted text CSS class moved to shared styles

--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-forum/course-forum.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-forum/course-forum.component.html
@@ -5,7 +5,7 @@
       <div>
         <b>Author: {{post.author}}</b>
       </div>
-      <div class="formatted">{{post.text}}</div>
+      <p class="formattedText">{{post.text}}</p>
       <div *ngIf="isCourseAdmin" class="my-3">
         <button type="button" class="btn btn-danger" (click)="delete(post)">Delete</button>
       </div>
