test detail question UI updated

--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-detail/test-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-detail/test-detail.component.html
@@ -5,19 +5,22 @@
   <div class="col-md-10 order-md-1">
     <div class="jumbotron">
       <h2>{{courseTest.topic}}</h2>
+      <h6>Deadline: {{dateTimeFormatter.formatToLocal(courseTest.deadline)}}</h6>
       <div>Weight: {{courseTest.weight}}</div>
       <div>{{courseTestUtils.isGradedToString(courseTest.isGraded)}}</div>
-      <div>Deadline: {{dateTimeFormatter.formatToLocal(courseTest.deadline)}}</div>
     </div>
     <div class="jumbotron" *ngFor="let question of courseTest.questions">
       <h3>Question {{question.number}}</h3>
       <app-test-question-text [questionText]="question.questionText"
                               [questionType]="question.type"></app-test-question-text>
-      <div>Correct answer: {{question.correctAnswer}}</div>
+      <h5>Correct answer:</h5>
+      <p class="formattedText">
+        {{question.correctAnswer}}
+      </p>
       <div>Points: {{question.points}}</div>
     </div>
 
-    <div class="my-3">
+    <div class="my-3" *ngIf="canBeEdited()">
       <button type="button" class="btn btn-warning" routerLink="/tests/edit/{{testId}}">Edit</button>
     </div>
 
