--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
@@ -48,15 +48,20 @@
     <div class="jumbotron" *ngFor="let question of testToUpdate.questions">
       <app-test-question-edit [question]="question"></app-test-question-edit>
       <div class="my-3">
-        <input type="button" class="btn btn-danger" (click)="deleteQuestion(question)" value="Delete"/>
+        <button class="btn btn-danger" (click)="deleteQuestion(question)">
+          Delete question
+        </button>
       </div>
     </div>
     <div class="my-3">
-      <button type="button" class="btn btn-primary" (click)="addQuestion()">Add question</button>
+      <button type="button" class="btn btn-primary" (click)="addQuestion()">Add new question</button>
     </div>
-    <div class="my-3">
-      <button type="button" class="btn btn-warning" (click)="saveChanges()">Save</button>
-      <button type="button" class="btn btn-default" routerLink="/tests/{{testId}}">Cancel</button>
+    <div class="jumbotron">
+      <h4>Save/Cancel updates</h4>
+      <div class="my-3">
+        <button type="button" class="btn btn-warning" (click)="saveChanges()">Save</button>
+        <button type="button" class="btn btn-default" routerLink="/tests/{{testId}}">Cancel</button>
+      </div>
     </div>
   </div>
 </div>
