--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-question-answer-form/test-question-answer-form.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-question-answer-form/test-question-answer-form.component.html
@@ -1,20 +1,24 @@
 <div *ngIf="answer.questionType == QuestionType.TextAnswer" class="form-group">
-  <div>{{answer.questionText}}</div>
-  <label for="answerText{{answer.questionNumber}}">Answer text</label>
-  <input type="text" class="form-control" id="answerText{{answer.questionNumber}}"
-         [(ngModel)]="answer.answerText" name="answerText{{answer.questionNumber}}">
+  <p class="formattedText">
+    {{answer.questionText}}
+  </p>
+  <label for="answerText{{answer.questionNumber}}"><b>Your answer</b></label>
+  <textarea class="form-control" id="answerText{{answer.questionNumber}}"
+            [(ngModel)]="answer.answerText" name="answerText{{answer.questionNumber}}"></textarea>
 </div>
 
 <div *ngIf="answer.questionType == QuestionType.SingleChoice" class="form-group">
-  <div>
+  <p class="formattedText">
     {{questionWithAnswers.questionText}}
-  </div>
+  </p>
   <div>
     <div *ngFor="let possibleAnswer of questionWithAnswers.answerChoices" class="form-check">
-      <input class="form-check-input" type="radio" name="possibleAnswerSingleChoice{{answer.questionNumber}}{{possibleAnswer.answerLetter}}"
+      <input class="form-check-input" type="radio"
+             name="possibleAnswerSingleChoice{{answer.questionNumber}}{{possibleAnswer.answerLetter}}"
              id="possibleAnswerSingleChoice{{answer.questionNumber}}{{possibleAnswer.answerLetter}}"
              [(ngModel)]="answer.answerText" [value]="possibleAnswer.answerLetter">
-      <label class="form-check-label" for="possibleAnswerSingleChoice{{answer.questionNumber}}{{possibleAnswer.answerLetter}}">
+      <label class="form-check-label"
+             for="possibleAnswerSingleChoice{{answer.questionNumber}}{{possibleAnswer.answerLetter}}">
         <b>{{possibleAnswer.answerLetter}}</b>
         <br>
         {{possibleAnswer.answerText}}
@@ -24,11 +28,17 @@
 </div>
 
 <div *ngIf="answer.questionType == QuestionType.MultipleChoice" class="form-group">
+  <p class="formattedText">
+    {{questionWithAnswers.questionText}}
+  </p>
   <div *ngFor="let answerChoice of questionWithAnswers.answerChoices" class="form-check">
-    <input class="form-check-input" type="checkbox" name="possibleAnswerMultipleChoice{{answer.questionNumber}}{{answerChoice.answerLetter}}"
+    <input class="form-check-input" type="checkbox"
+           name="possibleAnswerMultipleChoice{{answer.questionNumber}}{{answerChoice.answerLetter}}"
            id="possibleAnswerMultipleChoice{{answer.questionNumber}}{{answerChoice.answerLetter}}"
-           [checked]="isSelectedAnswer[answerChoice.answerLetter]" (change)="toggleCheckboxAnswer(answerChoice.answerLetter)">
-    <label class="form-check-label" for="possibleAnswerMultipleChoice{{answer.questionNumber}}{{answerChoice.answerLetter}}">
+           [checked]="isSelectedAnswer[answerChoice.answerLetter]"
+           (change)="toggleCheckboxAnswer(answerChoice.answerLetter)">
+    <label class="form-check-label"
+           for="possibleAnswerMultipleChoice{{answer.questionNumber}}{{answerChoice.answerLetter}}">
       <b>{{answerChoice.answerLetter}}</b>
       <br>
       {{answerChoice.answerText}}
