--- a/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
@@ -2,13 +2,11 @@
   <h3>Administrators</h3>
   <table class="table table-striped table-responsive">
     <tr>
-      <th>Name</th>
-      <th>Email</th>
+      <th>Username</th>
       <th></th>
     </tr>
     <tr *ngFor="let admin of admins">
       <td>{{admin.name}}</td>
-      <td>{{admin.email}}</td>
       <td>
         <button class="btn btn-danger" (click)="removeAdmin(admin.id)">Remove</button>
       </td>
