--- a/CourseManagementSystem.API/ClientApp/src/app/components/student-list/student-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/student-list/student-list.component.html
@@ -2,13 +2,12 @@
   <h3>Students</h3>
   <table class="table table-striped table-responsive">
     <tr>
-      <th>Name</th>
-      <th>Email</th>
+      <th>Username</th>
+      <th></th>
       <th></th>
     </tr>
     <tr *ngFor="let person of students">
       <td>{{person.name}}</td>
-      <td>{{person.email}}</td>
       <td><a class="nav-link" routerLink="/students/{{person.id}}">Details</a></td>
       <td>
         <button class="btn btn-danger" (click)="removeMember(person)">Remove</button>
