--- a/CourseManagementSystem.API/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -6,6 +6,8 @@
 </div>
 <div class="modal-body">
   {{text}}
+  <br>
+  {{textAppendix}}
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-danger" (click)="confirm()">Confirm</button>
