added support for multiple styles of confirm button in confirmation dialog

--- a/CourseManagementSystem.API/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -10,6 +10,7 @@
   {{textAppendix}}
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="confirm()">Confirm</button>
+  <button *ngIf="confirmButtonStyle==ConfirmButtonStyle.Warning" type="button" class="btn btn-danger" (click)="confirm()">Confirm</button>
+  <button *ngIf="confirmButtonStyle==ConfirmButtonStyle.Information" type="button" class="btn btn-info" (click)="confirm()">Confirm</button>
   <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cancel</button>
 </div>
