--- a/CourseManagementSystem.API/ClientApp/src/app/components/student-grade-list/student-grade-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/student-grade-list/student-grade-list.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h3>Grades</h3>
+  <h3>Other grades</h3>
   <table class="table table-striped table-responsive">
     <tr>
       <th>Topic</th>
