--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
@@ -57,10 +57,10 @@
       <button type="button" class="btn btn-primary" (click)="addQuestion()">Add new question</button>
     </div>
     <div class="jumbotron">
-      <h4>Save/Cancel updates</h4>
+      <h4>Save/Discard updates</h4>
       <div class="my-3">
-        <button type="button" class="btn btn-warning" (click)="saveChanges()">Save</button>
-        <button type="button" class="btn btn-default" routerLink="/tests/{{testId}}">Cancel</button>
+        <button type="button" class="btn btn-warning mr-3" (click)="saveChanges()">Save</button>
+        <button type="button" class="btn btn-danger" (click)="discardChanges()">Discard</button>
       </div>
     </div>
   </div>
